# GeneSieve

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  blog.md  client.py  heuristic_agent.py  models.py  openenv.yaml  prepare_data.py  pyproject.toml  test.py
server/: Dockerfile  GeneSieve_environment.py  __init__.py  app.py  requirements.txt
