# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-GeneSieve"
version = "0.1.0"
description = "Genesieve environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m GeneSieve.server.app
server = "GeneSieve.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["GeneSieve", "GeneSieve.server"]
package-dir = { "GeneSieve" = ".", "GeneSieve.server" = "server" }